--- a/scss/components/_tabs.scss
+++ b/scss/components/_tabs.scss
@@ -2,6 +2,8 @@
 
 .tab-section {
 	margin: 0 0 20px;
+	position:relative;
+
 	.tab-header {
 		overflow: hidden;
 		border-bottom: 2px solid $color_robins_egg_blue_approx;
